--- a/servlrt_ipl_project/WebContent/WEB-INF/web.xml
+++ b/servlrt_ipl_project/WebContent/WEB-INF/web.xml
@@ -6,7 +6,17 @@
 	<display-name>servlrt_ipl_project</display-name>
 	<welcome-file-list>
 		<welcome-file>/VIEWS/Strat.jsp</welcome-file>
+		<welcome-file>/CSS/Start.css</welcome-file>
+		<welcome-file>/JS/Start.js</welcome-file>
 	</welcome-file-list>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.har.ish.servlets.loginservletClass</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
 	<servlet>
 		<servlet-name>welcomeServlet</servlet-name>
 		<servlet-class>com.har.ish.servlets.loginclass</servlet-class>
@@ -100,4 +110,8 @@
 		<filter-name>SessionCheckingFilter</filter-name>
 		<url-pattern>/getExportPlayers</url-pattern>
 	</filter-mapping>
+	<error-page>
+		<error-code>400</error-code>
+		<location>/VIEWS/error400.jsp</location>
+	</error-page>
 </web-app>
