--- a/servlrt_ipl_project/WebContent/WEB-INF/web.xml
+++ b/servlrt_ipl_project/WebContent/WEB-INF/web.xml
@@ -17,6 +17,22 @@
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
+	<filter>
+		<filter-name>LoginCheckFilter</filter-name>
+		<filter-class>com.har.ish.filters.LoginCheckFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoginCheckFilter</filter-name>
+		<url-pattern>/login</url-pattern>
+	</filter-mapping>
+	<servlet>
+		<servlet-name>UserRegisterationServlet</servlet-name>
+		<servlet-class>com.har.ish.servlets.newUserRegisterationClass</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserRegisterationServlet</servlet-name>
+		<url-pattern>/newUserRegisteration</url-pattern>
+	</servlet-mapping>
 	<servlet>
 		<servlet-name>welcomeServlet</servlet-name>
 		<servlet-class>com.har.ish.servlets.loginclass</servlet-class>
