--- a/servlrt_ipl_project/pom.xml
+++ b/servlrt_ipl_project/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.17.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0 -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>5.4.17.Final</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
